--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,15 +8,7 @@
 </head>
 <body>
 
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal">Blog</h5>
-        <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="#">Главная</a>
-            <a class="p-2 text-dark" href="#">Блог</a>
-            <a class="p-2 text-dark" href="#">О нас</a>
-        </nav>
-<!--        <a class="btn btn-outline-primary" href="#">Sign up</a>-->
-    </div>
+    <header th:insert="blocks/header :: header"/>
 
     <section class="jumbotron text-center">
         <div class="container">
@@ -27,8 +19,8 @@
                 <a href="#" class="btn btn-secondary my-2">Secondary action</a>
             </p>
         </div>
-
     </section>
+
     <div class="album py-5 bg-light">
         <div class="container">
 
@@ -176,5 +168,6 @@
 
     <p th:text="'Hi, ' + ${name} + '!'"/>
 
+<footer th:insert="blocks/footer :: footer"/>
 </body>
 </html>
