--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -13,7 +13,11 @@
     <section class="jumbotron text-center">
         <div class="container">
             <h1>Блог</h1>
-            <p class="lead text-muted">Здесь будут посты из блога.</p>
+            <div th:each="el : ${posts}" class="alert alert-info mt-2">
+                <h3 th:text="${el.title}"/>
+                <p th:text="${el.anons}"/>
+                <a th:href="'/blog/'+${el.id}">Детальнее</a>
+            </div>
         </div>
     </section>
 
