Added view edit and delete post functionality
Also added show views on each post.

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -12,10 +12,10 @@
 
     <div  class="container mt-5 mb=2">
         <h1>Добавить пост</h1>
-        <form action="/blog/add" method="post" >
+        <form method="post" >
             <input typ="text" name="title" placeholder="Введите название потса" class="form-control"/></br>
             <input typ="text" name="anons" placeholder="Введите анонс потса" class="form-control"/></br>
-            <textarea  name="fullText" placeholder="Введите текст потса" class="form-control"></textarea></br>
+            <textarea  name="fullText" placeholder="Введите текст потса" class="form-control" ></textarea></br>
             <button class="btn btn-success">Опубликовать</button>
 <!--            TODO добавить type="submit"-->
         </form>
