--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -10,16 +10,18 @@
 
     <header th:insert="blocks/header :: header"/>
 
-<!--    <section class="jumbotron text-center">-->
         <div class="container">
             <h1>Блог</h1>
             <div th:each="el : ${posts}" class="alert alert-info mt-2">
                 <h3 th:text="${el.title}"/>
+                <p>
+                    <b>Просмотры:</b>
+                    <span th:text="${el.views}"/>
+                </p>
                 <p th:text="${el.anons}"/>
-                <a th:href="'/blog/'+${el.id}">Детальнее</a>
+                <a th:href="'/blog/'+${el.id}" class="btn btn-warning">Детальнее</a>
             </div>
         </div>
-<!--    </section>-->
 
     <footer th:insert="blocks/footer :: footer"/>
 
